2010-03-16  Akira TAGOH  <tagoh@redhat.com>

	* backends/lxde/main.c: new.

	* backends/lxde/lxde-im-settings-daemon.service.in: new.

	* backends/lxde/introspection.xml: new.

	* configure.ac: Add the library dependencies check for LXDE.

	* src/factory.c (imsettings_manager_real_start_im): send a signal
	for LXDE.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings.h: add DBus stuff for LXDE.

	* data/xinput.sh.in.in (is_gtk_supported): add LXDE support.

2010-03-05  Akira TAGOH  <tagoh@redhat.com>

	* data/Makefile.am: make xinputinfo.sh executable.

	* configure.ac: Add x11 module check to avoid DSO issue.

2010-02-16  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_notify_properties):
	Fix a segfault issue when /bin/sh points to non-bash shell.
	(rhbz#553680)

2010-02-05  Akira TAGOH  <tagoh@redhat.com>

	* backends/gconf/main.c (main): avoid a crash when the session bus
	isn't yet established or terminated. (rhbz#543005)

2010-01-04  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_finalize): avoid a segfault
	in libnotify when the dbus session is being closed. (rhbz#530357)

	* backends/xfce_xfconf/main.c (main): Fix a segfault issue
	on XFCE desktop. (rhbz#540062)

2009-12-21  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: don't unset IMSETTINGS_INTEGRATE_DESKTOP.

2009-10-06  Akira TAGOH  <tagoh@redhat.com>

	* data/xcompose.in.in: Add a xinput file for X compose.

2009-10-05  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: do not expand the wildcard in the message.

2009-09-30  Akira TAGOH  <tagoh@redhat.com>

	* tests/rhbz_526205.c: new test case.

	* src/monitor.c (_imsettings_monitor_lookup): compare the name with
	the lower case.

	* src/factory.c (imsettings_manager_real_whats_im_running): ensure not
	returning null even when any errors occurs.

	* imsettings/imsettings-observer.c (imsettings_whats_input_method_running):
	Fix a memory leak.
